--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+
+this is the cloned version first commit
+
     <div class="background-image">
         <!----------Navigation Bar and Logo---------->
         <header>
