add bg image in menu

--- a/full_menu.html
+++ b/full_menu.html
@@ -9,9 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gongman Chicken | Menu</title>
 </head>
+
 <body>
 
-    <!--FOOD MENU SECTION-->
+    <div class="background-image">
+
+        <!--FOOD MENU SECTION-->
     <section class="foodmenu" id="foodmenu">
         
         <h1 class="foodmenuheading">Our Menu</h1>
@@ -498,7 +501,17 @@
     </section>
 
     <a href="#" class="return-to-top" id="return-to-top"><img src="pic/uparrow.png" alt="Return to Top"></a>
-
     <script src="js/main.js"></script>
+
 </body>
+
+<style>
+    .background-image {
+        background-image: url(pic/scratch.png);
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: center;
+    }
+</style>
+
 </html>
