fixed food containers

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#menu">Menu</a></li>
-            <li><a href="#location">Location</a></li>
+            <li><a href="location.html">Location</a></li>
             <li><a href="#contactus">Contact Us</a></li>
             <li><a href="#aboutus">About Us</a></li>
         </ul>
@@ -75,7 +75,7 @@
 
             <!----------Soup---------->
             <div class="box">
-                <a href="#">
+                <a href="full_menu.html/soup-foods">
                     <div class="boxpic">
                         <img src="pic/soup.png">
                     </div>
@@ -92,7 +92,6 @@
         </div>
     </section>
     
-        
     <!----------Feedback---------->
     <section class="feedback" id="feedback">
         <div class="ftitle">
