put first two pictures

--- a/full_menu.html
+++ b/full_menu.html
@@ -44,7 +44,7 @@
 
             <div class="foodbox">
                 <div class="foodcontent">
-                    <img src="pic/qmark.png" alt="">
+                    <img src="pic/fried chicken.png" alt="">
                     <div class="info">
                         <h3>Fried Chicken</h3>
                         <div class="prices">
@@ -60,7 +60,7 @@
             
             <div class="foodbox">
                 <div class="foodcontent">
-                    <img src="pic/qmark.png" alt="">
+                    <img src="pic/omi chicken.png" alt="">
                     <div class="info">
                         <h3>Omi Chicken</h3>
                         <div class="prices">
