--- a/full_menu.html
+++ b/full_menu.html
@@ -351,7 +351,7 @@
             
             <div class="foodbox">
                 <div class="foodcontent">
-                    <img src="pic/qmark.png" alt="">
+                    <img src="pic/dried pollack.png" alt="">
                     <div class="info">
                         <h3>Korean Dried Pollack</h3>
                         <div class="prices">
