--- a/location.html
+++ b/location.html
@@ -9,6 +9,7 @@
             flex-direction: column;
             align-items: center;
             padding: 100px;
+            font-family: "Lilita One", sans-serif;
         }
 
         .map-container {
