--- a/full_menu.html
+++ b/full_menu.html
@@ -23,17 +23,12 @@
         <div class="foodnav">
             <div class="foodnavbox">
                 <ul>
-                    <a href="#chicken-foods">
-                        <li id="chicken-box">Chicken</li>
-                    </a>
-                    <a href="#appetizer-foods">
-                        <li id="appetizer-box">Appetizer</li>
-                    </a>
-                    <a href="#soup-foods">
-                        <li id="soup-box">Soup</li>
-                    </a>
+                    <li><a href="#chicken-foods">Chicken</a></li>
+                    <li><a href="#appetizer-foods">Appetizer</a></li>
+                    <li><a href="#soup-foods">Soup</a></li>
                 </ul>
             </div>
+            
         </div>
 
             <!----------Chicken Menu---------->
