--- a/full_menu.html
+++ b/full_menu.html
@@ -85,9 +85,9 @@
 
             <div class="foodbox">
                 <div class="foodcontent">
-                    <img src="pic/qmark.png" alt="">
+                    <img src="pic/omi garlic.png" alt="">
                     <div class="info">
-                        <h3>Garlic Garlic Chicken</h3>
+                        <h3>Omi Garlic Chicken</h3>
                         <div class="prices">
                             <span>Whole 750</span>
                             <span>Half 400</span>
