--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="full_menu.html">Menu</a></li>
             <li><a href="location.html">Location</a></li>
             <li><a href="#contactus">Contact Us</a></li>
-            <li><a href="#aboutus">About Us</a></li>
+            <li><a href="about us.html">About Us</a></li>
         </ul>
     </header>
 
@@ -37,7 +37,7 @@
         <div class="home-text">
             <h1>Gongman Chicken</h1>
             <h2>Eating is a necessity, but cooking is an art.</h2>
-            <a href="#" class="abt">About Us</a>
+            <a href="about us.html" class="abt">About Us</a>
         </div>
 
         <div class="home-pic">
