changed text color

--- a/about us.html
+++ b/about us.html
@@ -22,7 +22,7 @@
     <div class="message">
         <h1>About Us</h1>
             <p> 
-                <strong>Gongman Chicken’s mission is to be a representation of Korean culture in the Philippines; it tends to be a place where many Filipinos satisfy their craving for Korean fried chicken and wish to experience Korean cuisine. The restaurant offers a variety of food to choose from and although it is pricier than other restaurants, the quality of food is worth the price.</strong>
+                Gongman Chicken’s mission is to be a representation of Korean culture in the Philippines; it tends to be a place where many Filipinos satisfy their craving for Korean fried chicken and wish to experience Korean cuisine. The restaurant offers a variety of food to choose from and although it is pricier than other restaurants, the quality of food is worth the price.
             </p>
         </div>
 
