--- a/location.html
+++ b/location.html
@@ -1,54 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gongman Chicken</title>
+    <link rel="stylesheet" type= "text/css" href="location loc.css"/>
+
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gongman Chicken</title>
     <title>Google map</title>
-    <style>
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 100px;
-            font-family: "Lilita One", sans-serif;
-        }
-
-        .map-container {
-            width: 90%; 
-            margin-top: 120px;
-        }
-
-        .address {
-            width: 90%; 
-            margin-top: 20px;
-            font-size: 18px;
-            
-        }
-
-        h1 {
-            margin-bottom: 10px;
-        }
-
-        @media (min-width: 600px) {
-            .content {
-                flex-direction: row;
-                justify-content: space-between;
-            }
-
-            .address {
-                width: 70%; 
-            }
-            .map-container{
-                width: 60%;
-            }
-        }
-
-        @media (max-width: 600px) {
-            .map-container {
-                height: 1000px;
-                width:fit-content;
-            }
-        }
-    </style>
+   
 </head>
     
 <body>
@@ -58,11 +24,11 @@
             <h1>Location</h1>
             <p> 
                 <img src="C:\Users\Yoobin\Downloads\location.png">
-                <strong> Address:</strong>
+                 Address:
                 1733 Jorge Bocobo St, Malate, Manila, 1004 Metro Manila
                 <br>
                 <img src="C:\Users\Yoobin\Downloads\telephone.png">
-                <strong> Phone number:</strong>
+                 Phone number:
                 0936 915 8522
             </p>
         </div>
