--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="full_menu.html">Menu</a></li>
             <li><a href="location.html">Location</a></li>
-            <li><a href="#contactus">Contact Us</a></li>
+            <li><a href="contactform.html">Contact Us</a></li>
             <li><a href="about us.html">About Us</a></li>
         </ul>
     </header>
