--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="home-pic">
-            <img src="pic/korean.jpg">
+            <img src="pic/homepic.png">
         </div>
     </section>
 
@@ -57,7 +57,7 @@
             <div class="box">
                 <a href="full_menu.html#chicken-foods">
                     <div class="boxpic">
-                        <img src="pic/chicken.png">
+                        <img src="pic/yangnyeom chicken.png">
                     </div>
                     <h2>Chicken</h2>
                 </a>
@@ -67,7 +67,7 @@
             <div class="box">
                 <a href="full_menu.html#appetizer-foods">
                     <div class="boxpic">
-                        <img src="pic/appetizer.png">
+                        <img src="pic/yellow peach.png">
                     </div>
                     <h2>Appetizers</h2>
                 </a>
@@ -77,7 +77,7 @@
             <div class="box">
                 <a href="full_menu.html#soup-foods">
                     <div class="boxpic">
-                        <img src="pic/soup.png">
+                        <img src="pic/kimchi spam soup.png">
                     </div>
                     <h2>Soup</h2>
                 </a>
@@ -138,7 +138,7 @@
                         <h3>Message Us</h3>
                         <ul>
                             <li><a href="https://www.facebook.com/Gongmanchicken"><img src="pic/fb.png" alt="facebook" width="50" height="50"></a>Gongman Chicken</li>
-                            <li><a href="#"><img src="pic/call.png" alt="call" width="50" height="50"></a>0936-915-8522</li>
+                            <li><a href="contactform.html"><img src="pic/call.png" alt="call" width="50" height="50"></a>0936-915-8522</li>
                         </ul>
                     </div>
     
