--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="background-image">
-        <!----------Navigation Bar and Logo---------->
+        <!----------Header--------->
         <header>
             <a href="#" class="logo">
                 <img src="pic/logo.png">
