--- a/location.html
+++ b/location.html
@@ -11,23 +11,31 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gongman Chicken</title>
     <title>Google map</title>
    
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background-image: url(pic/scratch.png);
+            background-attachment: fixed;
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
 </head>
     
 <body>
-
     <div class="content">
         <div class="address">
             <h1>Location</h1>
             <p> 
-                <img src="C:\Users\Yoobin\Downloads\location.png">
+                <img src="pic/location.png">
                  Address:
                 1733 Jorge Bocobo St, Malate, Manila, 1004 Metro Manila
                 <br>
-                <img src="C:\Users\Yoobin\Downloads\telephone.png">
+                <img src="pic/telephone.png">
                  Phone number:
                 0936 915 8522
             </p>
