--- a/full_menu.html
+++ b/full_menu.html
@@ -14,6 +14,23 @@
 
     <div class="background-image">
 
+            <!----------Header--------->
+    <header>
+            <a href="#" class="logo">
+                <img src="pic/logo.png">
+                Gongman Chicken
+            </a>
+            <div class="bx bx-menu" id="menu-icon"></div>
+            
+        <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="full_menu.html">Menu</a></li>
+            <li><a href="location.html">Location</a></li>
+            <li><a href="contactform.html">Contact Us</a></li>
+            <li><a href="about us.html">About Us</a></li>
+        </ul>
+    </header>
+
         <!--FOOD MENU SECTION-->
 
     <section class="foodmenu" id="foodmenu">
@@ -498,6 +515,8 @@
         </div>
 
     </section>
+
+    
 
     <script src="js/main.js"></script>
 
