--- a/contactform.html
+++ b/contactform.html
@@ -34,7 +34,7 @@
 
         <div class="cformcontainer">
             <div class="cformheading">Get in touch with us!</div>
-            <form action="https://formsubmit.co/gongmangys@gmail.com" method="POST"> <!--Change email to client email. Verify their email to activate the form.-->
+            <form action="https://formsubmit.co/gico.gingoyon@gmail.com" method="POST"> <!--Change email to client email. Verify their email to activate the form.-->
                 <input type="text" name ="Name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Email id" required>
                 <input type="number" name="phone" placeholder="Phone No." required>
